--- a/attack-example.html
+++ b/attack-example.html
@@ -1,4 +1,5 @@
 <form method="post" action="http://localhost/csrf/process.php">
-	<input type="text" name="input" value="Hacked">
+	<input type="text" name="input" placeholder="make a requests">
+	<input type="text" name="csrfToken" placeholder="Csrf Token">
 	<button type="submit">Attack</button>
 </form>
